# tmdb-wallpaper

./: .editorconfig  .gitignore  .prettierrc.json  AppConfig.toml  Cargo.toml  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
.github/workflows/: tauri-release.yml
src/: App.vue  config.rs  i18n.ts  main.rs  main.ts  styles.css  types.d.ts
src-tauri/: AppConfig copy.toml  Cargo.toml  as.toml  tauri.conf.json
src-tauri/src/: config.rs  main.rs
src-tauri/src/lib/: tmdb.rs
src/components/: RestartModal.vue  SessionIdModal.vue  TmdbAuthModal.vue
src/components/atoms/: Button.vue
src/locales/: en.json  tr.json
src/stores/: main.ts
