[package]
name = "wallpaper-movie-show"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
iced = "0.4.2"
open = "3.0.2"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
text_io = "0.1.12"
tokio = { version = "1.20.1", features = ["full"] }
toml = "0.5.9"
wallpaper = { version = "3.2.0" }
