[package]
name = "wallpaperflix"
version = "0.0.0"
description = "A wallpaper downloader for desktop environments"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0", features = ["api-all", "system-tray"] }
dirs = "4.0.0"
open = "3.0.2"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["json"] }
text_io = "0.1.12"
toml = "0.5.9"
wallpaper = { version = "3.2.0" }
clokwerk = "0.3.5"
tokio = { version = "1.21.0", features = ["full"] }


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
